word wrap in pre fixed

--- a/ui/src/assets/styles.scss
+++ b/ui/src/assets/styles.scss
@@ -166,6 +166,19 @@ html {
   text-decoration: none;
 }
 
+.text-break {
+  word-break: break-word !important;
+  overflow-wrap: break-word !important;
+}
+
+pre {
+  white-space: pre-wrap; /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 /* Responsive grid layout start */
 .grid {
   margin: 0 17%;
@@ -216,10 +229,6 @@ html {
 .form-control input {
   background-color: transparent;
   color: white;
-}
-
-.form-control textarea {
-  white-space: pre-wrap;
 }
 
 /* Form Control color scheme end */
@@ -297,11 +306,6 @@ a.secondary:hover {
 
 .text-muted {
   opacity: 0.8;
-}
-
-.text-break {
-  word-break: break-word !important;
-  overflow-wrap: break-word !important;
 }
 
 .bg-darker {
